Tue Oct 19  1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSApplication.m: ([-terminate:]) modification based on
	patch by Aled.Davies@bigfoot.com to send notification.
	* Source/NSWorkspace.m: Fix to prevent duplicate notifications.

Tue Oct 19  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	Changing suggested by Richard: 
	* Source/NSApplication.m Removed ([-isRunningModalForWindow:]) in
 	favour of ([-modalWindow]).  This method returns the window
 	currently running a modal loop, if any; otherwise, nil.
	* Source/NSWindow.m ([-keyDown:]): changed accordingly.
	* Headers/AppKit/NSApplication.h: changed accordingly.

	Minor changings/fixes:
	* Source/NSCell.m ([-performClick:]): Rewritten the case when the
 	cell has no control view.  Also, made click faster. 
	* Source/NSControl.m ([-performClick:]): Added missing method.
	* Headers/AppKit/NSControl.h: Added corresponding declaration.
	* Source/NSMatrix.m ([-initWithFrame:mode:prototype:numberOfRows:
 	numberOfColumns:]): if numberOfRows or numberOfColumns is zero, 
	use default size for cells.
	* Source/NSMenuView.m ([-performKeyEquivalent:]): implemented method. 
	* Source/NSSavePanel.m ([-_initWithoutGModel]): Make the panel non
 	resizable.

1999-10-18  Lyndon Tremblay  <humasect@coolmail.com>

	* Headers/gnustep/gui/NSSecureTextField.h: Added.
	* Headers/gnustep/gui/NSTextField.h: Added method to share initialization
	data with NSSecureTextField.
	* Source/NSSecureTextField.m: Added, 90% done.
	* Source/NSTextField.m ([-_initFieldWithFrame:cellClass:]): Added for shared
	initialization code with NSSecureTextField.
	* Images/common_Diamond.tiff: Added for NSSecureTextField's bullets.
	* GNUmakefile: Added rules for NSSecureTextField's sources.

Tue Oct 14  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	Sorry for having messed things up using the wrong modifier 
	for key equivalents.  Thanks to Richard for pointing this out.
	* Source/NSApplication.m ([-sendEvent:]): Changed modifier 